<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".anadirAdministrador"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/my_app_secondary"
        android:layout_gravity="center_horizontal"
        android:layout_margin="40dp"
        android:padding="10dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBuscar"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:gravity="center"
            android:text="@string/form"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="visible" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@color/back_placeholders"
            android:textColor="@color/black"
            android:inputType="text"
            android:hint="@string/admin_name"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="84dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@color/back_placeholders"
            android:textColor="@color/black"
            android:inputType="phone"
            android:hint="@string/admin_phone"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="177dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_modify"
            android:layout_gravity="center"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="262dp" />

        <Button
            android:id="@+id/btnCrear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="262dp" />

    </LinearLayout>

</LinearLayout>