<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@color/my_app_secondary"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textColor="@color/black"
            android:text="Login"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:gravity="center" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSend"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:background="@color/back_placeholders"
            android:textColor="@color/black"
            android:inputType="text"
            android:hint="@string/hint_login_name"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSend2"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:background="@color/back_placeholders"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_login_password" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFizz"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:onClick="login"
        android:height="2dp"
        app:cornerRadius="30dp"
        android:text="@string/login"
        android:layout_weight="0.5"/>

    <Button
        android:id="@+id/btnX"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:onClick="options"
        android:visibility="gone"
        android:text="x"
        android:layout_weight="0.5"
        />

</LinearLayout>