<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBuscar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textColor="@color/white"
        android:background="@color/my_app_secondary"
        android:text="@string/list_admin"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_weight="0.5"
        style="@style/Widget.MaterialComponents.TextView"/>

    <SearchView
        android:layout_margin="20dp"
        android:id="@+id/svbuscaRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back_placeholders"
        android:queryHint="@string/find" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:weightSum="6"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/my_app_secondary"
            android:gravity="center"
            android:text="Nombre"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/my_app_secondary"
            android:gravity="center"
            android:text="Telefono"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/my_app_secondary"
            android:gravity="center"
            android:text="Opciones"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="2.5"
        android:weightSum="2">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="2dp"
            android:divider="@color/black"
            android:id="@+id/lvCounter"
            android:layout_weight="1.5"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/for_exit"
            android:id="@+id/exitCounter"
            android:onClick="exitCounter"
            android:layout_weight="0.5"
            android:layout_marginStart="20dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2"/>

        <com.google.android.material.button.MaterialButton
            app:cornerRadius="10dp"
            android:layout_gravity="bottom"
            android:gravity="clip_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginEnd="20dp"
            android:text="@string/add_admin"
            android:id="@+id/btn_add_admin"
            android:layout_weight="0.5"/>

    </LinearLayout>


</LinearLayout>